--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -26,11 +26,9 @@
         android:ems="10"
         android:hint="이름을 입력해주세요"
         android:inputType="textPersonName"
-        app:layout_constraintTop_toBottomOf="@+id/textView8"
-        app:layout_constraintStart_toStartOf="@+id/textView8"
         app:layout_constraintEnd_toEndOf="@+id/textView8"
-        tools:layout_editor_absoluteX="77dp"
-        tools:layout_editor_absoluteY="109dp" />
+        app:layout_constraintStart_toStartOf="@+id/textView8"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <TextView
         android:id="@+id/textView9"
@@ -93,4 +91,5 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
         app:layout_constraintVertical_bias="0.251"
         tools:targetApi="n_mr1" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
